randcs-core/src/main/java/org/example/common/error/RandcsException.java
package org.example.common.error;

import lombok.RequiredArgsConstructor;

@RequiredArgsConstructor
public class RandcsException extends RuntimeException {
    public final GlobalErrorCode errorCode;
}